[package]
name = "percentile_rank"
version = "0.1.0"
authors = ["Hameedshehnaz <shehnazhameed325n@gmail.com>"]
edition = "2018"
description = "calculates percentiles, ranks and positions of the data(repeated values as well) in given vector"
license = "MIT"
repository = "https://github.com/Hameedshehnaz/rust_lib.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
